--- a/package.json
+++ b/package.json
@@ -22,7 +22,13 @@
   },
   "homepage": "https://github.com/ruanyl/crispy-robot#readme",
   "dependencies": {
+    "body-parser": "^1.14.2",
     "caiuss": "^1.4.1",
+    "es6-promise": "^3.0.2",
+    "express": "^4.13.4",
+    "fs-extra": "^0.26.4",
+    "isomorphic-fetch": "^2.2.1",
+    "markdown": "^0.5.0",
     "medium-editor": "^5.13.0",
     "medium-editor-markdown": "^2.3.1",
     "milligram": "^1.0.3",
