--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "fs-extra": "^0.26.4",
     "isomorphic-fetch": "^2.2.1",
     "markdown": "^0.5.0",
+    "markdown-it": "^5.1.0",
     "medium-editor": "^5.13.0",
     "medium-editor-markdown": "^2.3.1",
     "milligram": "^1.0.3",
