--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "medium-editor": "^5.13.0",
     "medium-editor-markdown": "^2.3.1",
     "milligram": "^1.0.3",
+    "rangy": "^1.3.0",
     "to-markdown": "^2.0.1"
   },
   "devDependencies": {
     "browserify": "^13.0.0",
+    "browserify-shim": "^3.8.12",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-sourcemaps": "^1.6.0",
@@ -45,5 +47,11 @@
     "marked": "^0.3.5",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "browserify": {
+    "transform": ["browserify-shim"]
+  },
+  "browserify-shim": {
+    "rangy": "global:rangy"
   }
 }
