--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "es6-promise": "^3.0.2",
     "express": "^4.13.4",
     "fs-extra": "^0.26.4",
+    "highlight.js": "^9.1.0",
     "isomorphic-fetch": "^2.2.1",
     "markdown": "^0.5.0",
     "markdown-it": "^5.1.0",
@@ -49,7 +50,9 @@
     "vinyl-source-stream": "^1.1.0"
   },
   "browserify": {
-    "transform": ["browserify-shim"]
+    "transform": [
+      "browserify-shim"
+    ]
   },
   "browserify-shim": {
     "rangy": "global:rangy"
