--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "medium-editor-markdown": "^2.3.1",
     "milligram": "^1.0.3",
     "rangy": "^1.3.0",
+    "shortid": "^2.2.4",
     "to-markdown": "^2.0.1"
   },
   "devDependencies": {
